# merge-tags-cli

./: .gitignore  README.md  pyproject.toml  requirements.md
src/merge_tags_cli/: __init__.py  main.py
