[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merge-tags-cli"
version = "0.1.0"
authors = [
  { name="ShinChven", email="shinchven@gmail.com" },
]
description = "A CLI tool to merge tags from text files in a directory."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/ShinChven/merge-tags-cli"
"Bug Tracker" = "https://github.com/ShinChven/merge-tags-cli/issues"

[project.scripts]
mergetags = "merge_tags_cli.main:main_cli"
